[gd_scene load_steps=15 format=3 uid="uid://qdkps1styyhc"]

[ext_resource type="Script" path="res://scripts/MainMenuState.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bbwxq6swvdh1b" path="res://assets/png/menu/play.png" id="2"]
[ext_resource type="Texture2D" uid="uid://by8opeywhmu6g" path="res://assets/png/gdBackgrounds/1.png" id="3"]
[ext_resource type="Script" path="res://misc/menuBGScroll.gd" id="4"]
[ext_resource type="Shader" uid="uid://bym562ulgnb6p" path="res://shaders/gwebChroma.tres" id="5"]
[ext_resource type="Environment" path="res://assets/environments/menuGlow.tres" id="6"]
[ext_resource type="Script" path="res://misc/menuGndScroll.gd" id="7"]
[ext_resource type="PackedScene" uid="uid://ccj5kryyswjjl" path="res://scenes/MenuBlock.tscn" id="8"]
[ext_resource type="FontFile" uid="uid://bch1to88uachv" path="res://assets/fonts/oxygene1.ttf" id="8_l517q"]
[ext_resource type="Texture2D" uid="uid://ctd53qcscdo1q" path="res://assets/png/menu/options.png" id="12"]
[ext_resource type="Texture2D" uid="uid://dufw0hktgk3hh" path="res://assets/png/menu/stats.png" id="13"]
[ext_resource type="Texture2D" uid="uid://cfq56qklih3ep" path="res://assets/png/menu/credits.png" id="14"]
[ext_resource type="Texture2D" uid="uid://b42j7oxhn03o0" path="res://assets/png/menu/bonusSongs.png" id="15"]

[sub_resource type="ShaderMaterial" id="1"]
shader = ExtResource("5")
shader_parameter/offset = 1.0

[node name="MainMenuState" type="Node2D"]
script = ExtResource("1")

[node name="Cam" type="Camera2D" parent="."]
position = Vector2(960, 540)

[node name="CanvasLayer" type="CanvasLayer" parent="Cam"]

[node name="ShaderRect" type="ColorRect" parent="Cam/CanvasLayer"]
material = SubResource("1")
offset_right = 1920.0
offset_bottom = 1080.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("6")

[node name="ParallaxBG" type="ParallaxBackground" parent="."]
script = ExtResource("4")

[node name="ParallaxBGLayer" type="ParallaxLayer" parent="ParallaxBG"]
motion_mirroring = Vector2(2048, 0)

[node name="BGSprite" type="Sprite2D" parent="ParallaxBG/ParallaxBGLayer"]
modulate = Color(0.027451, 0.235294, 0.94902, 1)
position = Vector2(960, 540)
texture = ExtResource("3")

[node name="ParallaxGround" type="ParallaxBackground" parent="."]
layer = -99
script = ExtResource("7")

[node name="ParallaxGroundLayer" type="ParallaxLayer" parent="ParallaxGround"]
motion_mirroring = Vector2(384, 0)

[node name="MB1" parent="ParallaxGround/ParallaxGroundLayer" instance=ExtResource("8")]
position = Vector2(0, 993)

[node name="MB2" parent="ParallaxGround/ParallaxGroundLayer" instance=ExtResource("8")]
position = Vector2(768, 993)

[node name="MB3" parent="ParallaxGround/ParallaxGroundLayer" instance=ExtResource("8")]
position = Vector2(1536, 993)

[node name="MB4" parent="ParallaxGround/ParallaxGroundLayer" instance=ExtResource("8")]
position = Vector2(2304, 993)

[node name="Title" type="Label" parent="."]
modulate = Color(0.635294, 1, 0.380392, 1)
show_behind_parent = true
offset_right = 1920.0
offset_bottom = 200.0
pivot_offset = Vector2(418, 375)
theme_override_fonts/font = ExtResource("8_l517q")
theme_override_font_sizes/font_size = 128
text = "FNF VS ROBTOP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayBtn" type="Sprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2")

[node name="OptsBtn" type="Sprite2D" parent="."]
position = Vector2(960, 950)
scale = Vector2(0.6, 0.6)
texture = ExtResource("12")

[node name="StatsBtn" type="Sprite2D" parent="."]
position = Vector2(680, 950)
scale = Vector2(0.6, 0.6)
texture = ExtResource("13")

[node name="CreditsBtn" type="Sprite2D" parent="."]
position = Vector2(1240, 950)
scale = Vector2(0.6, 0.6)
texture = ExtResource("14")

[node name="BonusSongsBtn" type="Sprite2D" parent="."]
position = Vector2(1300, 540)
scale = Vector2(0.6, 0.6)
texture = ExtResource("15")
